# notification-system-maryia

./: README.md  alembic.ini  main.py  notification_service.py  pyproject.toml
alembic/: env.py
alembic/versions/: 61061895e90b_initial_schema.py  f6047ccee243_fix_enum_values.py
api/: app.py  deps.py
api/routes/: notifications.py
api/schemas/: notification.py
channels/: email_channel.py  settings.py  sms_channel.py
config/: channels.py  router.py
core/: channel_result.py  notification_channel.py  notification_message.py  notification_result.py  notification_router.py
db/: config.py  enums.py  session.py
db/dev/: init_db.py  seed_data.py
db/models/: audit_trail.py  notification.py
interfaces/: event_listener.py
observer_event_system/: event_dispatcher.py  notification_event.py
observer_event_system/listeners/: log_listener.py
observer_event_system/listeners/audit/: audit_repository.py  sqlalchemy_hooks.py
tests/api/: test_api.py
tests/channels/: test_email_channel.py  test_sms_channel.py
tests/observer_system/: test_observer_system.py
tests/router/: test_router.py
