[project]
name = "notification-system-maryia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "psycopg[binary,pool]>=3.1.0,<4.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
]
